--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -296,21 +296,27 @@ jobs:
 
       - name: SSH into EC2 and run tests
         run: |
-          # First copy AWS credentials to the EC2 instance
-          scp -i labsuser.pem aws_credentials.txt ec2-user@$EC2_PUBLIC_IP:~/
+          # Create AWS credentials file
+          cat > aws_config << EOF
+          [default]
+          region=${{ env.AWS_REGION }}
+          EOF
 
+          cat > aws_credentials << EOF
+          [default]
+          aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_session_token=${{ secrets.AWS_SESSION_TOKEN }}
+          EOF
+
+          # Copy AWS credentials to the EC2 instance
+          ssh -i labsuser.pem ec2-user@$EC2_PUBLIC_IP "mkdir -p ~/.aws"
+          scp -i labsuser.pem aws_config ec2-user@$EC2_PUBLIC_IP:~/.aws/config
+          scp -i labsuser.pem aws_credentials ec2-user@$EC2_PUBLIC_IP:~/.aws/credentials
+          ssh -i labsuser.pem ec2-user@$EC2_PUBLIC_IP "chmod 600 ~/.aws/credentials"
+
+          # Main testing script
           ssh -i labsuser.pem ec2-user@$EC2_PUBLIC_IP << EOF
-            # Create AWS credentials directory
-            mkdir -p ~/.aws
-            
-            # Move credentials file to the right location
-            mv ~/aws_credentials.txt ~/.aws/credentials
-            chmod 600 ~/.aws/credentials
-            
-            # Create AWS config file
-            echo "[default]
-            region=${{ env.AWS_REGION }}" > ~/.aws/config
-            
             # Install Docker and dependencies
             sudo yum update -y
             sudo yum install -y docker
@@ -321,6 +327,9 @@ jobs:
             # Install docker-compose
             sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.3/docker-compose-\$(uname -s)-\$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
+            
+            # Verify AWS credentials
+            aws sts get-caller-identity
             
             # Login to ECR with proper credentials
             aws ecr get-login-password --region ${{ env.AWS_REGION }} | sudo docker login --username AWS --password-stdin ${{ env.AWS_ECR_URI }}
@@ -444,9 +453,37 @@ jobs:
           echo "${{ secrets.EC2_SSH_KEY }}" > qa_key.pem
           chmod 400 qa_key.pem
 
-      - name: Deploy New Images to QA Environment
+      - name: Set up SSH config to skip host key checking
         run: |
-          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -i qa_key.pem ec2-user@${{ secrets.EC2_QA_PUBLIC_IP }} << EOF
+          mkdir -p ~/.ssh
+          echo "Host *
+            StrictHostKeyChecking no
+            UserKnownHostsFile=/dev/null" > ~/.ssh/config
+          chmod 600 ~/.ssh/config
+
+      - name: Deploy New Images to QA Environment with SSL
+        run: |
+          # Create AWS credentials file
+          cat > aws_config << EOF
+          [default]
+          region=${{ env.AWS_REGION }}
+          EOF
+
+          cat > aws_credentials << EOF
+          [default]
+          aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_session_token=${{ secrets.AWS_SESSION_TOKEN }}
+          EOF
+
+          # Copy AWS credentials to the EC2 instance
+          ssh -i qa_key.pem ec2-user@${{ secrets.EC2_QA_PUBLIC_IP }} "mkdir -p ~/.aws"
+          scp -i qa_key.pem aws_config ec2-user@${{ secrets.EC2_QA_PUBLIC_IP }}:~/.aws/config
+          scp -i qa_key.pem aws_credentials ec2-user@${{ secrets.EC2_QA_PUBLIC_IP }}:~/.aws/credentials
+          ssh -i qa_key.pem ec2-user@${{ secrets.EC2_QA_PUBLIC_IP }} "chmod 600 ~/.aws/credentials"
+
+          # Main deployment script
+          ssh -i qa_key.pem ec2-user@${{ secrets.EC2_QA_PUBLIC_IP }} << EOF
             # Install Docker if not already installed
             if ! command -v docker &> /dev/null; then
               echo "Installing Docker..."
@@ -462,12 +499,26 @@ jobs:
             # Install Docker Compose if not already installed
             if ! command -v docker-compose &> /dev/null; then
               echo "Installing Docker Compose..."
-              sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+              sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.3/docker-compose-\$(uname -s)-\$(uname -m)" -o /usr/local/bin/docker-compose
               sudo chmod +x /usr/local/bin/docker-compose
               sudo ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
             else
               echo "Docker Compose is already installed"
             fi
+            
+            # Install Certbot for SSL
+            echo "Installing Certbot..."
+            sudo dnf install -y certbot
+            
+            # Get instance public DNS and IP
+            EC2_PUBLIC_DNS=\$(curl -s http://169.254.169.254/latest/meta-data/public-hostname)
+            EC2_PUBLIC_IP=\$(curl -s http://169.254.169.254/latest/meta-data/public-ipv4)
+            echo "Public DNS: \$EC2_PUBLIC_DNS"
+            echo "Public IP: \$EC2_PUBLIC_IP"
+            
+            # Login to ECR
+            echo "Logging in to ECR..."
+            aws ecr get-login-password --region ${{ env.AWS_REGION }} | sudo docker login --username AWS --password-stdin ${{ env.AWS_ECR_URI }}
             
             # Pull latest images
             echo "Pulling latest images from ECR..."
@@ -478,9 +529,141 @@ jobs:
             echo "Stopping current containers..."
             sudo docker-compose down || true
             
-            # Create docker-compose.yml
+            # Stop any services using port 80
+            sudo fuser -k 80/tcp || true
+            
+            # Obtain SSL certificate (using --staging flag for testing)
+            echo "Obtaining SSL certificate..."
+            sudo certbot certonly --standalone \
+              --non-interactive --agree-tos \
+              --staging \
+              --email your-email@example.com \
+              -d \$EC2_PUBLIC_DNS
+            
+            if [ ! -d "/etc/letsencrypt/live/\$EC2_PUBLIC_DNS" ]; then
+              echo "Using self-signed certificate for testing..."
+              sudo mkdir -p /etc/letsencrypt/live/\$EC2_PUBLIC_DNS
+              sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+                -keyout /etc/letsencrypt/live/\$EC2_PUBLIC_DNS/privkey.pem \
+                -out /etc/letsencrypt/live/\$EC2_PUBLIC_DNS/fullchain.pem \
+                -subj "/CN=\$EC2_PUBLIC_DNS"
+            fi
+            
+            # Create nginx.conf with SSL support
+            echo "Creating nginx configuration..."
+            cat > nginx.conf << EOFNGINX
+            events {}
+            
+            http {
+                include /etc/nginx/mime.types;
+                default_type application/octet-stream;
+                server_tokens off;
+            
+                # Redirect HTTP to HTTPS
+                server {
+                    listen 80;
+                    server_name \$EC2_PUBLIC_DNS;
+                    return 301 https://\$host\$request_uri;
+                }
+            
+                # HTTPS server block
+                server {
+                    listen 443 ssl;
+                    server_name \$EC2_PUBLIC_DNS;
+                    
+                    # SSL Certificate Configuration
+                    ssl_certificate /etc/letsencrypt/live/\$EC2_PUBLIC_DNS/fullchain.pem;
+                    ssl_certificate_key /etc/letsencrypt/live/\$EC2_PUBLIC_DNS/privkey.pem;
+                    ssl_protocols TLSv1.2 TLSv1.3;
+                    ssl_prefer_server_ciphers on;
+                    
+                    # Serve React frontend
+                    location / {
+                        root /usr/share/nginx/html;  # Path to React build files
+                        try_files \$uri /index.html;  # Ensure all routes go to index.html
+                    }
+            
+                    # Forward API requests to backend
+                    location /login {
+                        proxy_pass http://backend:8080;
+                        proxy_set_header Host \$host;
+                        proxy_set_header X-Real-IP \$remote_addr;
+                        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                        proxy_set_header X-Forwarded-Proto \$scheme;
+                    }
+            
+                    location /register {
+                        proxy_pass http://backend:8080;
+                        proxy_set_header Host \$host;
+                        proxy_set_header X-Real-IP \$remote_addr;
+                        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                        proxy_set_header X-Forwarded-Proto \$scheme;
+                    }
+            
+                    location /logout {
+                        proxy_pass http://backend:8080;
+                        proxy_set_header Host \$host;
+                        proxy_set_header X-Real-IP \$remote_addr;
+                        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                        proxy_set_header X-Forwarded-Proto \$scheme;
+                    }
+            
+                    location /game {
+                        proxy_pass http://backend:8080;
+                        proxy_set_header Host \$host;
+                        proxy_set_header X-Real-IP \$remote_addr;
+                        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                        proxy_set_header X-Forwarded-Proto \$scheme;
+                    }
+            
+                    location /search {
+                        proxy_pass http://backend:8080;
+                        proxy_set_header Host \$host;
+                        proxy_set_header X-Real-IP \$remote_addr;
+                        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                        proxy_set_header X-Forwarded-Proto \$scheme;
+                    }
+            
+                    location /favorite {
+                        proxy_pass http://backend:8080;
+                        proxy_set_header Host \$host;
+                        proxy_set_header X-Real-IP \$remote_addr;
+                        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                        proxy_set_header X-Forwarded-Proto \$scheme;
+                    }
+            
+                    location /recommendation {
+                        proxy_pass http://backend:8080;
+                        proxy_set_header Host \$host;
+                        proxy_set_header X-Real-IP \$remote_addr;
+                        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                        proxy_set_header X-Forwarded-Proto \$scheme;
+                    }
+            
+                    # Serve static assets
+                    location /static/ {
+                        root /usr/share/nginx/html;
+                    }
+                }
+            }
+            EOFNGINX
+            
+            # Create custom Dockerfile for the frontend with SSL
+            echo "Creating custom frontend Dockerfile..."
+            cat > Dockerfile.frontend.ssl << EOFDOCK
+            FROM ${{ env.AWS_ECR_URI }}/frontend:latest
+            COPY nginx.conf /etc/nginx/nginx.conf
+            EXPOSE 80 443
+            CMD ["nginx", "-g", "daemon off;"]
+            EOFDOCK
+            
+            # Build custom frontend image with SSL config
+            echo "Building frontend with SSL support..."
+            sudo docker build -t frontend-ssl:latest -f Dockerfile.frontend.ssl .
+            
+            # Create docker-compose.yml with SSL setup
             echo "Creating docker-compose.yml..."
-            cat > docker-compose.yml << 'EOFDC'
+            cat > docker-compose.yml << EOFDC
             version: "3.8"
             services:
               backend:
@@ -496,9 +679,12 @@ jobs:
                   - app-network
               
               frontend:
-                image: ${{ env.AWS_ECR_URI }}/frontend:latest
+                image: frontend-ssl:latest
+                volumes:
+                  - /etc/letsencrypt:/etc/letsencrypt:ro
                 ports:
                   - "80:80"
+                  - "443:443"
                 depends_on:
                   - backend
                 networks:
@@ -509,6 +695,10 @@ jobs:
                 driver: bridge
             EOFDC
             
+            # Setup auto-renewal for the SSL certificate
+            echo "Setting up certificate auto-renewal..."
+            sudo bash -c 'echo "0 0,12 * * * root python3 -c '\''import random; import time; time.sleep(random.random() * 3600)'\'' && certbot renew -q" > /etc/cron.d/certbot-renew'
+            
             # Start containers
             echo "Starting containers..."
             sudo docker-compose up -d
@@ -517,8 +707,12 @@ jobs:
             echo "Verifying deployment..."
             sleep 30
             echo "Checking frontend health..."
-            curl -s http://localhost:80/health || echo "Health check failed, but continuing..."
+            curl -k https://localhost/health || echo "Health check failed, but continuing..."
             echo "Checking backend health..."
             curl -s http://localhost:8080/actuator/health || echo "Health check failed, but continuing..."
+            
             echo "Deployment complete!"
+            echo "Your application is now available at:"
+            echo "- HTTP: http://\$EC2_PUBLIC_DNS (redirects to HTTPS)"
+            echo "- HTTPS: https://\$EC2_PUBLIC_DNS"
           EOF
