--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -247,18 +247,14 @@ jobs:
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Log in to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
       - name: Setup SSH key
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" > labsuser.pem
           chmod 400 labsuser.pem
           mkdir -p ~/.ssh
-          echo "Host *
-            StrictHostKeyChecking no
-            UserKnownHostsFile=/dev/null" > ~/.ssh/config
+          echo "Host *" > ~/.ssh/config
+          echo "  StrictHostKeyChecking no" >> ~/.ssh/config
+          echo "  UserKnownHostsFile=/dev/null" >> ~/.ssh/config
           chmod 600 ~/.ssh/config
 
       - name: Start a temporary EC2 instance
@@ -271,7 +267,6 @@ jobs:
             --key-name vockey \
             --security-group-ids sg-01d9849f009a95731 \
             --subnet-id subnet-0d19fbf0bf001c3b2 \
-            --tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=TempIntegrationTest}]' \
             --query "Instances[0].InstanceId" \
             --output text)
           echo "EC2_INSTANCE_ID=$INSTANCE_ID" >> $GITHUB_ENV
@@ -279,8 +274,7 @@ jobs:
       - name: Wait for EC2 to be ready
         run: |
           aws ec2 wait instance-status-ok --instance-ids $EC2_INSTANCE_ID
-          # Add extra time for SSH service to start
-          sleep 90
+          sleep 90  # Give extra time for EC2 to fully initialize
 
       - name: Get EC2 Public IP
         id: get_ec2_ip
@@ -292,95 +286,9 @@ jobs:
           echo "EC2_PUBLIC_IP=$PUBLIC_IP" >> $GITHUB_ENV
           echo "EC2 Public IP: $PUBLIC_IP"
 
-      - name: Create AWS credential files
+      - name: Install Docker on EC2
         run: |
-          mkdir -p aws_temp
-
-          # Create AWS config
-          cat > aws_temp/config << EOF
-          [default]
-          region=${{ env.AWS_REGION }}
-          EOF
-
-          # Create AWS credentials
-          cat > aws_temp/credentials << EOF
-          [default]
-          aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws_session_token=${{ secrets.AWS_SESSION_TOKEN }}
-          EOF
-
-          # Create docker-compose.yml
-          cat > aws_temp/docker-compose.yml << EOF
-          version: "3.8"
-          services:
-            db:
-              image: mysql:latest
-              environment:
-                MYSQL_ROOT_HOST: "%"
-                MYSQL_DATABASE: twitch
-                MYSQL_ROOT_PASSWORD: secret
-                TZ: UTC
-              ports:
-                - "3306:3306"
-              networks:
-                - app-network
-            backend:
-              image: ${{ env.AWS_ECR_URI }}/backend:latest
-              environment:
-                SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/twitch
-                SPRING_DATASOURCE_USERNAME: root
-                SPRING_DATASOURCE_PASSWORD: secret
-                SPRING_PROFILES_ACTIVE: prod
-              ports:
-                - "8080:8080"
-              depends_on:
-                - db
-              networks:
-                - app-network
-            frontend:
-              image: ${{ env.AWS_ECR_URI }}/frontend:latest
-              ports:
-                - "80:80"
-              depends_on:
-                - backend
-              networks:
-                - app-network
-          networks:
-            app-network:
-              driver: bridge
-          EOF
-
-      - name: Check if SSH is available
-        run: |
-          # Keep trying to connect until it works or times out
-          for i in {1..10}; do
-            if ssh -i labsuser.pem ec2-user@$EC2_PUBLIC_IP "echo SSH connection successful"; then
-              echo "SSH connection established!"
-              break
-            else
-              echo "SSH connection failed. Retrying in 10 seconds... (Attempt $i of 10)"
-              sleep 10
-            fi
-          done
-
-      - name: Copy files to EC2
-        run: |
-          # Create .aws directory on EC2
-          ssh -i labsuser.pem ec2-user@$EC2_PUBLIC_IP "mkdir -p ~/.aws"
-
-          # Copy AWS config files
-          scp -i labsuser.pem aws_temp/config ec2-user@$EC2_PUBLIC_IP:~/.aws/config
-          scp -i labsuser.pem aws_temp/credentials ec2-user@$EC2_PUBLIC_IP:~/.aws/credentials
-          ssh -i labsuser.pem ec2-user@$EC2_PUBLIC_IP "chmod 600 ~/.aws/credentials"
-
-          # Copy docker-compose.yml
-          scp -i labsuser.pem aws_temp/docker-compose.yml ec2-user@$EC2_PUBLIC_IP:~/docker-compose.yml
-
-      - name: Set up EC2 and run tests
-        run: |
-          ssh -i labsuser.pem ec2-user@$EC2_PUBLIC_IP "bash -s" << 'EOF'
-            # Install Docker and dependencies
+          ssh -i labsuser.pem ec2-user@$EC2_PUBLIC_IP << EOF
             sudo yum update -y
             sudo yum install -y docker
             sudo systemctl start docker
@@ -388,29 +296,107 @@ jobs:
             sudo usermod -a -G docker ec2-user
             
             # Install docker-compose
-            sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.3/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.3/docker-compose-\$(uname -s)-\$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
-            
-            # Verify AWS credentials
-            aws sts get-caller-identity
-            
-            # Login to ECR with proper credentials
-            aws ecr get-login-password --region ${AWS_REGION} | sudo docker login --username AWS --password-stdin ${AWS_ECR_URI}
-            
-            # Pull the latest images from ECR
-            echo "Pulling frontend image from ECR..."
-            sudo docker pull ${AWS_ECR_URI}/frontend:latest
-            
-            echo "Pulling backend image from ECR..."
-            sudo docker pull ${AWS_ECR_URI}/backend:latest
+          EOF
 
-            # Start services
-            echo "Starting services with docker-compose..."
+      - name: Copy AWS credentials to EC2
+        run: |
+          ssh -i labsuser.pem ec2-user@$EC2_PUBLIC_IP "mkdir -p ~/.aws"
+
+          echo "[default]" > credentials
+          echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" >> credentials
+          echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> credentials
+          echo "aws_session_token=${{ secrets.AWS_SESSION_TOKEN }}" >> credentials
+
+          echo "[default]" > config
+          echo "region=${{ env.AWS_REGION }}" >> config
+
+          scp -i labsuser.pem credentials ec2-user@$EC2_PUBLIC_IP:~/.aws/credentials
+          scp -i labsuser.pem config ec2-user@$EC2_PUBLIC_IP:~/.aws/config
+
+          ssh -i labsuser.pem ec2-user@$EC2_PUBLIC_IP "chmod 600 ~/.aws/credentials"
+          rm credentials config
+
+      - name: Verify AWS credentials on EC2
+        run: |
+          ssh -i labsuser.pem ec2-user@$EC2_PUBLIC_IP "aws sts get-caller-identity"
+
+      - name: Login to ECR and run tests
+        run: |
+          ssh -i labsuser.pem ec2-user@$EC2_PUBLIC_IP << EOF
+            # Login to ECR
+            AWS_ECR_URI="${{ env.AWS_ECR_URI }}"
+            echo "ECR URI: \$AWS_ECR_URI"
+            
+            aws ecr get-login-password --region ${{ env.AWS_REGION }} | sudo docker login --username AWS --password-stdin \$AWS_ECR_URI
+            
+            # Pull images
+            echo "Pulling frontend image..."
+            sudo docker pull \$AWS_ECR_URI/frontend:latest
+            
+            echo "Pulling backend image..."
+            sudo docker pull \$AWS_ECR_URI/backend:latest
+            
+            # Create docker-compose.yml
+            cat > docker-compose.yml << 'EOD'
+            version: "3.8"
+            services:
+              db:
+                image: mysql:latest
+                environment:
+                  MYSQL_ROOT_HOST: "%"
+                  MYSQL_DATABASE: twitch
+                  MYSQL_ROOT_PASSWORD: secret
+                  TZ: UTC
+                ports:
+                  - "3306:3306"
+                networks:
+                  - app-network
+              backend:
+                image: AWS_ECR_URI_PLACEHOLDER/backend:latest
+                environment:
+                  SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/twitch
+                  SPRING_DATASOURCE_USERNAME: root
+                  SPRING_DATASOURCE_PASSWORD: secret
+                  SPRING_PROFILES_ACTIVE: prod
+                ports:
+                  - "8080:8080"
+                depends_on:
+                  - db
+                networks:
+                  - app-network
+              frontend:
+                image: AWS_ECR_URI_PLACEHOLDER/frontend:latest
+                ports:
+                  - "80:80"
+                depends_on:
+                  - backend
+                networks:
+                  - app-network
+            networks:
+              app-network:
+                driver: bridge
+            EOD
+            
+            # Replace placeholder with actual ECR URI
+            sed -i "s|AWS_ECR_URI_PLACEHOLDER|\$AWS_ECR_URI|g" docker-compose.yml
+            
+            # Start containers
+            echo "Starting containers..."
             sudo docker-compose up -d
             
             # Wait for services to start
             echo "Waiting for services to start..."
-            sleep 60
+            sleep 90
+            
+            # Check container status
+            echo "Checking container status:"
+            sudo docker ps -a
+            
+            # Check container logs
+            echo "Container logs:"
+            sudo docker-compose logs
             
             # Run integration tests
             echo "Running integration tests..."
@@ -418,22 +404,19 @@ jobs:
             # Test frontend
             echo "Testing frontend health endpoint..."
             FRONTEND_STATUS=0
-            curl -v http://localhost:80/health || FRONTEND_STATUS=$?
+            curl -v http://localhost:80/health || FRONTEND_STATUS=\$?
             
             # Test backend
             echo "Testing backend health endpoint..."
             BACKEND_STATUS=0
-            curl -v http://localhost:8080/actuator/health || BACKEND_STATUS=$?
+            curl -v http://localhost:8080/actuator/health || BACKEND_STATUS=\$?
             
             # Return overall status
-            if [ $FRONTEND_STATUS -eq 0 ] && [ $BACKEND_STATUS -eq 0 ]; then
+            if [ \$FRONTEND_STATUS -eq 0 ] && [ \$BACKEND_STATUS -eq 0 ]; then
               echo "Integration tests passed!"
               exit 0
             else
-              echo "Integration tests failed! Frontend status: $FRONTEND_STATUS, Backend status: $BACKEND_STATUS"
-              # Show logs for debugging
-              echo "Container logs:"
-              sudo docker-compose logs
+              echo "Integration tests failed! Frontend status: \$FRONTEND_STATUS, Backend status: \$BACKEND_STATUS"
               exit 1
             fi
           EOF
